--- a/index.html
+++ b/index.html
@@ -75,28 +75,10 @@
         <section style="margin: 0 auto;margin-left: 10px;padding: 10px;">
             <button id="playButton" style="background:linear-gradient(rgba(115, 255, 0, 0.692), rgba(187, 169, 12, 0.596));padding: 16px;float: right;border-radius: 10px;border:1px solid red;font-weight: bold;cursor: pointer;">Play Audio</button>
             <h1><span>♥♥</span> Dear Wife,<span>♥♥</span>,</h1>
-            <p>I hope this message finds you well. I've been reflecting on recent events,<br> and I realize that my
-                actions have hurt you, and for that, I am truly sorry.
+            <p>I am truly sorry.
+                Maaf Kar do pls......!🙏🙏
             </p>
-            <p>
-                I want you to know that I take full responsibility for my mistakes, <br>and I deeply regret any pain or
-                frustration I may have caused. <br>My intention is never to hurt you, and I'm committed to making
-                <br>amends and learning from this experience.
-            </p>
-            <p>
-                I value our relationship immensely, and I understand the importance of trust and communication.<br> I am
-                willing to do whatever it takes to rebuild that trust and ensure that <br>we can move forward together
-                in a positive and healthy way.
-            </p>
-            <p>
-                Please let me know when you're ready to talk, and I'm here to listen. I love you, <br>and I'm dedicated
-                to making things right.
-            </p>
-
-            <br>
-            Sincerely,
-            <br>
-            <b>Sujeet Yadav</b>
+           
         </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
