--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <button id="playButton" style="background:linear-gradient(rgba(115, 255, 0, 0.692), rgba(187, 169, 12, 0.596));padding: 16px;float: right;border-radius: 10px;border:1px solid red;font-weight: bold;cursor: pointer;">Play Audio</button>
             <h1><span>♥♥</span> Dear Wife,<span>♥♥</span>,</h1>
             <p>I am truly sorry.
-                Maaf Kar do pls......!🙏🙏
+                <br>
+                Maaf Kar do pls....!🙏🙏
             </p>
            
         </section>
